tests/ui/de-union.stderr
error: currently only structs and enums are supported by this derive
 --> tests/ui/de-union.rs:3:10
  |
3 | #[derive(Jayson)]
  |          ^^^^^^
  |
  = note: this error originates in the derive macro `Jayson` (in Nightly builds, run with -Z macro-backtrace for more info)
