tests/ui/de-union.rs
use jayson::Jayson;

#[derive(Jayson)]
union Union {
    x: i32,
}

fn main() {}
